<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ElementsOnBackgroundPadding"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal">

    <ImageView
        android:id="@+id/dialog_imageView"
        android:layout_width="94dp"
        android:layout_height="83dp"
        android:src="@drawable/sharp_error_black_36dp"
        app:layout_constraintEnd_toStartOf="@+id/dialog_Error_textView"
        app:layout_constraintTop_toTopOf="@+id/dialog_Error_textView"></ImageView>

    <TextView
        android:id="@+id/dialog_Error_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Error"
        android:textSize="38sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/dialog_info_textView"
        app:layout_constraintStart_toStartOf="@+id/dialog_info_textView"></TextView>

    <TextView
        android:id="@+id/dialog_info_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="Names of injection and \nillness are mandatory."
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.681"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"></TextView>
</androidx.constraintlayout.widget.ConstraintLayout>