...
    <string name="header2">#3 Scroll and choose the year</string>
    <string name="header3">#4 Slide and set the dose</string>
    <string name="header4">#5 Obligatory injection?</string>
    <string name="radioButtonPos">Yes</string>
    <string name="radioButtonNeg">No</string>
    <string name="insertButton">Insert</string>
    <string name="snackbarText">New injection has been added.</string>

    //display injections activity
    <string name="toolbar_title_display_injections">MY INJECTIONS "</string>
    <string name="menu_sort_by_name">Sort by name</string>
    <string name="menu_sort_by_year">Sort by year</string>
    <string name="menu_sort_by_dose">Sort by dose</string>
...
